css/small.css
@import url('https://fonts.googleapis.com/css2?family=Karla&family=Spectral&display=swap');

body {
    background-color: #ffffff;
}

header {
    max-width: 1100px;
    background-color: #18C3EA;
    line-height: 2.75em;
    border-radius: 10px;
}
  
#content {
    max-width: 1100px;
    margin: 0 auto;
    background-color: #ffffff;
  } 

h1 {      
    padding: 10px;
    text-align: center;
    font-family: 'Spectral', serif;
    font-size: 3em;
    line-height: 1.1em;
    color: #000000;
    position:relative;
}

h2 {     
    max-width: 1100px;
    float: left; 
    padding: 2px;
    font-family: 'Spectral', serif;
    font-size: 2em;
    line-height: 1em;
    color: #000000;
    position: relative;
    
}

h3 {      
    padding: 10px;
    text-align: center;
    font-family: 'Spectral', serif;
    font-size: 1.5em;
    line-height: 1.1em;
    color: #000000;
    position:relative;
}

p {
    text-align: left;
    padding: 5px;
    font-family: 'Karla', sans-serif;
    font-size: 1em;
    line-height: 1.35em;
    color: #000000;
}

footer {
    max-width: 1100px;
    background-color: #18C3EA;
    align-items: center;
    justify-content: center;
    line-height: 2.75em;
    border-radius: 10px;
}
/* For index.html */
.list-title {
    float: none;
    border-bottom: inset grey;
}

li {
    text-align: justify;
    font-family: 'Spectral', serif;
    font-size: 1.25em;
}

.picture-right-image {
    position: relative;
    z-index: 1000;
    width: 285px;
    height: 286px;
    margin: 15px 10px 15px 5px;
    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.info {
    text-align: center;
}

.three {
    color: #000000;
}

#lastUpdated {
    color: #250077;
}
/* For design-princliples.html */
#contents {
    display: grid;
    max-width: 1100px;
    margin: 0 auto;
    background-color: #ffffff;
}

#container {
    display: grid;
    max-width: 1100px;
	grid-template-columns: 1fr;
	grid-gap: 15px;
	padding: 10px;
}

.dprinc {
    float: none;
    max-width: 1100px;
    text-align: center; 
    text-decoration: underline;
    padding: 5px;
    font-family: 'Spectral', serif;
    font-size: 2em;
    line-height: 1em;
    color: #000000;
    position: relative;
}

.column {
    max-width: 1100px;
    align-items: center;
    margin: 3px;
    border: 1px solid #DAFFED;
    background-color: #ffffff;
    box-shadow: 10px -2px 15px 5px grey;
    
}

.column-pic {
    display: block;
    position: relative;
    z-index: 1000;
    margin-left: auto;
    margin-right: auto;
    width: 346px;
    height: 768px;
}

a.design {
    display: block;
    text-align: center;
    align-items: center;
    color: #181942
}

a:hover {
    color: green;
}

